--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <compass.version>0.12.2</compass.version>
         <inotify.version>0.8.8</inotify.version>
         <fsevent.version>0.9.3</fsevent.version>
-        <jruby.version>1.6.8</jruby.version>
+        <jruby.version>9.3.3.0</jruby.version>
     </properties>
     
     <dependencies>
@@ -96,6 +96,15 @@
         <pluginManagement>
             <plugins>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.10.0</version>
+                    <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                    </configuration>
+                </plugin>
+                <plugin>
                     <groupId>org.jasig.maven</groupId>
                     <artifactId>maven-site-plugin</artifactId>
                     <configuration>
@@ -135,12 +144,17 @@
                 </plugin>
             </plugins>
         </pluginManagement>
-        <plugins>
+        <plugins>         
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-plugin-plugin</artifactId>
+                <version>3.4</version>
+            </plugin>
             <!-- Downloads and installs the required Ruby Gems -->
             <plugin>
                 <groupId>de.saumya.mojo</groupId>
                 <artifactId>gem-maven-plugin</artifactId>
-                <version>0.29.4</version>
+                <version>2.0.1</version>
                 <executions>
                     <execution>
                         <id>install-gems</id>
@@ -166,7 +180,7 @@
                     <reportPlugins combine.children="append">
                         <plugin>
                             <artifactId>maven-plugin-plugin</artifactId>
-                            <version>2.9</version>
+                            <version>3.6.4</version>
                         </plugin>
                     </reportPlugins>
                 </configuration>
